# penguin

./: Cargo.toml  README.md
src/: config.rs  execution.rs  main.rs  portfolio.rs  risk.rs  strategy.rs
src/exchange/: binance.rs
src/infra/: mod.rs
src/market/: mod.rs  orderbook.rs  sync.rs
